css/rs.css
.page-header-text {
    margin-top: 10px;
    margin-bottom: 20px;
}

.footer {
    padding-top: 19px;
    color: #777;
    border-top: 1px solid #e5e5e5;
}

.rating-stars,
.rating-stars-noclick {
    unicode-bidi: bidi-override;
    direction: rtl;
    font-size: 150%;
}
.rating-stars > span,
.rating-stars-noclick {
    display: inline-block;
    position: relative;
    color: orange;
}
.rating-stars > span:hover:before,
.rating-stars > span:hover ~ span:before {
    content: "\2605";
    position: absolute;
    color: #0094ff;
}
.rating-stars > score {
    font-weight: bold;
    color: orange;
}
.rating-stars > score > of-possible  {
    font-size: 75%;
    font-weight: lighter;
    color: grey;
}
.rating-star {
    font-size: 125%;
}
.rating-date {
    font-size: 100%;
}

.rating-background {
    background-image: url("/image/gold_circle.png");
}

.film-line {
    font-size: 125%;
}
.film-line > .film-title {
    font-size: 125%;
    font-weight: bold;
}
.film-line > .film-title > a {
    color: black;
}

.tv-episode-title {
    font-size: 110%;
    font-weight: bold;
}
.tv-season, 
.tv-episodenum {
}

poster {
    float: left;
    padding: 5px;
    border-radius: 3px;
}

poster > img,
poster > a > img {
    width: 150px;
    height: 221px;
    object-fit: cover;
    object-position: center;
}

detail {
    float: left;
    vertical-align: middle;
    padding: 15px;
    padding-bottom: 5px;
}

.thirdparty-bar {
    position: relative;
    text-align: left;
    padding-bottom: 5px;
}

.thirdparty-bar > .source-logo-1,
.thirdparty-bar > .source-logo-2 {
    display: inline-block;
}

.thirdparty-bar > .source-logo-1 > a > imdbScore,
.thirdparty-bar > .source-logo-1 > a > tmdbScore {
    position: absolute;
    top: 1px;
    left: 40px;
}

.thirdparty-bar > .source-logo-2 > a > imdbScore,
.thirdparty-bar > .source-logo-2 > a > tmdbScore {
    position: absolute;
    top: 1px;
    left: 101px;
}

imdbScore {
    color: black;
}

tmdbScore {
    color: #00d570;
}

.thirdparty-bar > a:link {
    text-decoration: none;
}

.checkmark-off {
    font-weight: bold;
    color: grey;    
}

.checkmark-on {
    font-weight: bold;
    color: #10b33c;    
}

.film-filmlists {
    float: left;
    padding-right: 15px;
}

.streams {
    float: left;
    padding-left: 5px;
    padding-right: 10px;
}

.stream {
    float: left;
    padding-right: 10px;
    padding-bottom: 10px;
}

.stream-icon {
    background-image: url("Icons.png");
    background-color: transparent;
    border-radius: 4px;
    height: 33px;
    width: 35px;
}

.icon-Netflix { background-position: -580px -53px; }
.icon-Amazon { background-position: -445px -10px; }
.icon-xfinity { background-position: -490px -182px; }
.icon-Hulu { background-position: -445px -96px; }
.icon-YouTube { background-position: -625px -10px; }
.icon-HBO { background-position: -625px -96px; }

.rating-detail {
    position: fixed;
    margin-right:auto;
    margin-left:auto;
    border-radius: 5px;
    top: 30%;
    width: 90%;
    left: 5%;
    z-index: 1;
    background-color: rgba(255, 255, 255, 0.85);
    box-shadow: 10px 10px 5px grey;
}

.userlist-film {
    min-height: 231px;
    width: 160px;
    background-color: #f9f9f9;
    border-style: outset;
    border-width: thin;
    border-radius: 3%;
    margin-bottom: 5px;
}

.film-dropdown-content {
    display: none;
    position: absolute;
    top: 0;
    z-index: 1;
    min-width: 325px;
    min-height: 231px;
    background-color: rgba(249, 249, 249, 0.95);
    border-style: outset;
    border-width: thin;
    margin-bottom: 5px;
}

.film-dropdown-col-1,.film-dropdown-col-3,.film-dropdown-col-5,.film-dropdown-col-7,.film-dropdown-col-9,.film-dropdown-col-11 {
    left: 170px;
    border-left-style: none;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    border-top-right-radius: 3%;
    border-bottom-right-radius: 3%;
}
.film-dropdown-col-2,.film-dropdown-col-4,.film-dropdown-col-6,.film-dropdown-col-8,.film-dropdown-col-10,.film-dropdown-col-12 {
    left: -305px;
    border-right-style: none;
    border-top-left-radius: 3%;
    border-bottom-left-radius: 3%;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
}

.search-status {
    font-weight: bold;
}

.filmlist-checkbox-inline > label {
    margin-bottom: 0px;
    margin-top: 5px;
}

/* The container <div> - needed to position the dropdown content */
.rs-dropdown-checklist {
    position: relative;
    display: inline-block;
}

/* Dropdown Content (Hidden by Default) */
.rs-dropdown-checklist-content {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
}

/* Links inside the dropdown */
.rs-dropdown-checklist-content a {
    color: black;
    text-decoration: none;
    display: block;
    white-space: nowrap;
    padding: 3px 20px 3px 20px;
}

/* Change color of dropdown links on hover */
.rs-dropdown-checklist-content a:hover {background-color: #f1f1f1}

/* Show the dropdown menu on hover */
.rs-dropdown-checklist:hover .rs-dropdown-checklist-content {
    display: block;
}

/* Any line inside the dropdown other than <a> */
.rs-dropdown-checklist-content checklist-line {
    white-space: nowrap;
    padding-left: 20px;
    padding-right: 20px;
}

checklist-line input[type="radio"] {
    margin-right: 3px;
}

#header-search-suggestion {
    position: absolute;
    padding: 1px 5px 1px 5px;
    border: 1px;
    border-style: solid;
    border-top: none;
    border-radius: 0 4px 10px 10px;
    z-index: 10;
    background-color: white;
}

#header-search-suggestion a {
    text-decoration-line: none;
}

#header-search-suggestion a.suggestion-selected > div {
	background-color: #f1f1f1;
}

.search-suggestion-item {
    padding-top: 1px;
    padding-bottom: 1px;
    border-bottom: 1px solid #ccc;
    min-height: 61px;
}

.search-suggestion-item > poster {
    padding: 0px;
    padding-right: 1px;
}

.search-suggestion-item > poster > img,
.search-suggestion-item > poster > a > img {
	width: 40px;
    height: auto;
}

.search-suggestion-rating-rs {
    color: orange;
}

.search-suggestion-label {
    text-align: center;
    border-bottom: 1px solid #ccc;
}

.rs-filmlist-sort {
    text-align: right;
    width: 100%;
}

.rs-filmlist-sort img {
    height: 25px;
}

.rs-navbar {
    margin-bottom: 0px;
}

.filmlist-header {
    margin-top: 20px;
}

detail-film {
}

detail-episodes {
    padding-left: 15px;
    padding-right: 15px;
}

detail-episode {
    margin-left: 30px;
    margin-right: 30px;
}

detail-episode-rating {
    padding-left: 5px;
    color: orange;
}

@media (min-width:768px) {
    .rating-detail {
        width: 70%;
        left: 15%;
    }

    .film-dropdown-col-1,.film-dropdown-col-2,.film-dropdown-col-4,.film-dropdown-col-5,.film-dropdown-col-7,.film-dropdown-col-8,.film-dropdown-col-10,.film-dropdown-col-11 {
        left: 170px;
        border-left-style: none;
        border-top-left-radius: 0;
        border-bottom-left-radius: 0;
        border-top-right-radius: 3%;
        border-bottom-right-radius: 3%;
    }
    .film-dropdown-col-3,.film-dropdown-col-6,.film-dropdown-col-9,.film-dropdown-col-12 {
        left: -305px;
        border-right-style: none;
        border-top-left-radius: 3%;
        border-bottom-left-radius: 3%;
        border-top-right-radius: 0;
        border-bottom-right-radius: 0;
    }

    .footer {
        padding-right: 0;
        padding-left: 0;
    }
}

@media (min-width:992px) {
    .rating-detail {
        width: 60%;
        left: 20%;
    }

    .film-dropdown-col-1,.film-dropdown-col-2,.film-dropdown-col-5,.film-dropdown-col-6,.film-dropdown-col-9,.film-dropdown-col-10 {
        left: 170px;
        border-left-style: none;
        border-top-left-radius: 0;
        border-bottom-left-radius: 0;
        border-top-right-radius: 3%;
        border-bottom-right-radius: 3%;
    }
    .film-dropdown-col-3,.film-dropdown-col-4,.film-dropdown-col-7,.film-dropdown-col-8,.film-dropdown-col-11,.film-dropdown-col-12 {
        left: -305px;
        border-right-style: none;
        border-top-left-radius: 3%;
        border-bottom-left-radius: 3%;
        border-top-right-radius: 0;
        border-bottom-right-radius: 0;
    }
}

@media (min-width:1200px) {
    .rating-detail {
        width: 46%;
        left: 27%;
    }

    .film-dropdown-col-1,.film-dropdown-col-2,.film-dropdown-col-3,.film-dropdown-col-4,.film-dropdown-col-7,.film-dropdown-col-8,.film-dropdown-col-9,.film-dropdown-col-10 {
        left: 170px;
        border-left-style: none;
        border-top-left-radius: 0;
        border-bottom-left-radius: 0;
        border-top-right-radius: 3%;
        border-bottom-right-radius: 3%;
    }
    .film-dropdown-col-5,.film-dropdown-col-6,.film-dropdown-col-11,.film-dropdown-col-12 {
        left: -305px;
        border-right-style: none;
        border-top-left-radius: 3%;
        border-bottom-left-radius: 3%;
        border-top-right-radius: 0;
        border-bottom-right-radius: 0;
    }
}

